tests/baselines/reference/nodeModulesCjsFormatFileAlwaysHasDefault(module=node18).errors.txt
error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
index.ts(2,8): error TS1192: Module '"subfolder/index"' has no default export.


!!! error TS5109: Option 'moduleResolution' must be set to 'Node18' (or left unspecified) when option 'module' is set to 'Node18'.
==== subfolder/index.ts (0 errors) ====
    // cjs format file
    export const a = 1;
==== index.ts (1 errors) ====
    // esm format file
    import mod from "./subfolder/index.js";
           ~~~
!!! error TS1192: Module '"subfolder/index"' has no default export.
    mod;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }